@@ -139,7 +139,7 @@ public abstract class AbstractRewriteMojo extends ConfigurableRewriteMojo {
         if (!baseFolders.isEmpty()) {
             List<Path> sortedPaths = new ArrayList<>(baseFolders);
             Collections.sort(sortedPaths);
-            return sortedPaths.get(0);
+            return sortedPaths.getFirst();
         } else {
             return Paths.get(mavenSession.getExecutionRootDirectory());
         }
